--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
  * License: MIT
  */
 
-@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 
 html {
   height: 100%;
